--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -121,6 +121,14 @@
 
     /*////   user-edit   ////*/
 
+
+
+.mypage-container{
+  height:auto!important;
+  height: 100%;
+  min-height: 100%;
+}
+
 .mypage-edit-midasi{
   text-align: center;
   letter-spacing: 0.1em;
