--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
         <% if user_signed_in? %>
         <div class="kensaku">
           <%= search_form_for @search, url:search_path do |f| %>
-            <%= f.search_field :title_cont, class: "serch-main"%>
+            <%= f.search_field :title_start, class: "serch-main"%>
           <%= f.submit "検索", class: "search-btn"%>
           <% end %>
           <% else %>
