--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -3,77 +3,76 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-/*post-new*/
-
-
-
-.post-new-title{
-	text-align: center;
-	letter-spacing: 0.3em;
-	margin-top: 40px;
-}
-.post-new-userimage {
-	text-align: center;
-	margin-top: 80px;
-	margin-bottom: 10px;
-}
-.post-new-username {
-	text-align: center;
-	font-size: 20px;
-	overflow: auto;
-}
-.post-new-email {
-	text-align: center;
-	font-size: 15px;
-	overflow: auto;
-}
-.post-new-table-main {
-	margin-left: 30px;
+		/*post-new*/
+.post-new-main-user{
+	float: left;
 	margin-top: 20px;
-	margin-bottom: 30px;
+	margin-left: 135px;
+	text-align: center;
+}
+.post-new-main-user-title{
+	padding-bottom: 80px;
+	letter-spacing: 0.1em;
+}
+
+
+.post-new-main-posts{
+	float: left;
+	margin-left: 50px;
+	margin-top: 40px;
+	margin-bottom: 40px;
 	padding:10px;
-	width: 600px;
-	height: 400px;
+	width: 750px;
 	border-top-right-radius: 18px;
 	border-top-left-radius: 18px;
 	border-bottom-right-radius: 18px;
 	border-bottom-left-radius: 18px;
 	box-shadow: rgba(0,0,0,0.7) 3px 3px 10px;
 }
-
-
-.post-new-table-head-title-th {
+.post-new-main-option-title{
 	text-align: center;
-	padding-bottom: 20px;
-	letter-spacing: 0.5em;
+	letter-spacing: 0.1em;
 }
-.post-new-table-head-title-h4 {
-	width: 130px;
-	text-align: center;
+.post-option-title{
+	font-size: 16px;
+	margin-left: 10px;
 }
-.post-new-up {
-	padding-top: 15px;
-	padding-bottom: 15px;
-	text-align: right;
-	padding-right: 45px;
+.post-new-main-option-location{
+	margin-bottom: 10px;
 }
-
-
+.post-new-main-option-genre{
+	margin-bottom: 10px;
+}
+.post-new-main-option-post-title{
+	margin-bottom: 10px;
+}
 #post_location[type="text"] {
         width: 200px;
         height: 40px;
+        margin-left: 40px;
     }
+#post_genre{
+	margin-left: 8px;
+}
 #post_title[type="text"] {
 		width: 250px;
         height: 40px;
         margin-bottom: 5px;
+        margin-left: 40px;
 }
-
 #post_posted_details{
 		width: 600px;
 		height: 200px;
 		margin-right: 15px;
+		margin-left: 120px;
 }
+.post-new-main-option-post-new-up{
+	text-align: right;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	margin-right: 25px;
+}
+
 
 
         /*post-index*/
