--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -3,140 +3,84 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-/*///  user-show   ///*/
+    /*///  user-show   ///*/
 
-#mypage-profile-image {
-  font-size: 15px;
-  margin-top: 10px;
-  padding: 5px 8px;
-  border: solid 1px #EDBC6C;
-  color: #666;
-  position: relative;
-  padding: 0;
-  border-radius: 5px;
-  cursor: pointer;
-  width: 400px;
-  height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-color: #fff;
-  overflow: hidden;
-  box-sizing: border-box;
-  transition: 0.3s ease-out;
-}
-
-#mypage-profile-image i {
-  font-size: 100px;
-  color: #aaa;
-  line-height: 250px;
-  transition: 0.3s ease-out;
-}
-
-#mypage-profile-image i.add {
-  display: none;
-  font-size: 50px;
-  position: absolute;
-  top: -90px;
-  right: 15px;
-}
-
-#mypage-profile-image:hover {
-  background-color: #EDBC6C;
-  transition: 0.3s ease-out;
-  opacity: 0.9;
-}
-
-#mypage-profile-image:hover i {
-  transition: 0.3s ease-out;
-  display: block;
-  color: #fff;
-}
-
-.usershow-option-table{
-  width: 1100px;
-  height: 300px;
-}
-
-.usershow-option-caption {
+.mypage-main-user-title{
+  margin: 0;
+  padding-top: 30px;
+  padding-bottom: 40px;
   text-align: center;
 }
-.usershow-option-tbody-td1{
+.mypage-main-user-option{
   text-align: center;
-  font-size: 25px;
-  padding-bottom: 15px;
+  margin-left: 160px;
+  width: 300px;
+  float: left;
 }
-.usershow-option-tbody-td2{
-  text-align: center;
-}
-.usershow-option-tbody-td3{
+.mypage-main-user-option2{
   border-top-right-radius: 18px;
   border-top-left-radius: 18px;
   border-bottom-right-radius: 18px;
   border-bottom-left-radius: 18px;
   box-shadow: rgba(0,0,0,0.8) 3px 3px 10px;
-  padding: 10px;
+}
+.mypage-main-user-option-username{
+  font-size: 20px;
+  padding-top: 22px;
+  padding-bottom: 5px;
+}
+.mypage-main-user-option-email{
+  padding-top: 5px;
+  padding-bottom: 20px;
+}
+.mypage-main-user-introduction{
+  float: left;
   font-size: 15px;
   width: 700px;
+  height: 300px;
+  margin-left: 100px;
+  margin-right: 180px;
+  margin-bottom: 20px;
+  padding: 10px;
+  border-top-right-radius: 18px;
+  border-top-left-radius: 18px;
+  border-bottom-right-radius: 18px;
+  border-bottom-left-radius: 18px;
+  box-shadow: rgba(0,0,0,0.8) 3px 3px 10px;
 }
-.mypage-introduction{
-  position: relative;
-  top: -90px;
-  overflow: auto;
-
-}
-
-.usershow-option-tbody-td4{
-  text-align: center;
-  font-size: 16px;
-  padding-top: 5px;
-}
-.pozition{
-  padding-top: 15px;
-  padding-bottom: 15px;
+.mypage-main-user-option-edit{
+  padding-right: 190px;
+  padding-bottom: 10px;
   text-align: right;
-  padding-right: 45px;
 }
-.mypage-edit{
-  margin-right: 5px;
-}
-
-.mypage-hr {
-  box-shadow: rgba(0,0,0,0.5) 3px 3px 10px;
-}
-
-.mypage-index-main-caption{
+.mypage-posts-index{
   text-align: center;
+  width: 740px;
+  margin-left: 135px;
+  margin-bottom: 30px;
+  float: left;
 }
-
-.mypage-index-main-tbody-td{
-  width: 750px;
-  height: 100%;
-}
-
-.mypage-index-main{
-  margin-bottom: 40px;
+.mypage-posts-index-title{
+  text-align: center;
 }
 
 
     /*////   user-edit   ////*/
 
-
-
-.mypage-container{
-  height:auto!important;
-  height: 100%;
-  min-height: 100%;
-}
-
-.mypage-edit-midasi{
+.mypage-edit-main-title{
   text-align: center;
-  letter-spacing: 0.1em;
 }
-.mypage-edit-name-title{
-  letter-spacing: 0.1em;
+.mypage-edit-main-image{
+  float: left;
+  width: 300px;
+  height: 300px;
+  margin-left: 150px;
 }
-
+.mypage-edit-main-option{
+  float: left;
+  margin-left: 50px;
+  width: 600px;
+}
 #user_username[type="text"] {
     width: 200px;
     height: 40px;
@@ -146,18 +90,12 @@
 #user_introduction{
     width: 600px;
     height: 200px;
-    margin-right: 15px;
 }
-
 .mypage-edit-up{
   text-align: right;
-  margin-right: 150px;
   margin-top: 20px;
   margin-bottom: 40px;
 }
-
-
-
 
 
 
