follow kinou tuika

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,7 +3,7 @@
 		<span class="post-index-span">---Recently Active---</span>
 	</div>
 	<div class="index-main-card-container">
-		<% @posts.each_with_index do |post| %>
+		<% @posts.each do |post| %>
 			<%= link_to post_path(post.id) do %>
 				<div class="index-main-card">
 					<span class="index-main-card-span">
