--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -102,5 +102,10 @@
 
 
 
+<% if @post.images.attached? %>
+						<%= image_tag @post.images.first, size: "250x250"  %> <br>
+					<% end %>
+
+
 
 
