follow view tuika

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,6 +49,8 @@ header{
   margin-top: 55px;
   margin-left: 60px;
   float: left;
+  color: #000;
+  text-shadow: rgba(0,0,0,0.4) 2px 2px 4px;
 }
 
 .icon2{
@@ -56,6 +58,8 @@ header{
   margin-top: 55px;
   margin-left: 50px;
   float: left;
+  color: #000;
+  text-shadow: rgba(0,0,0,0.4) 2px 2px 4px;
 }
 .icon3{
   font-size: 35px;
