--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -112,6 +112,7 @@
 	height: 100%;
 	padding-top: 7px;
 	display: inline-block;
+	color: #000;
 }
 .index-main-card-span{
 	padding-left: 15px;
@@ -159,74 +160,52 @@
 	margin-top: 30px;
 	margin-bottom: 40px;
 	margin-left: 125px;
-	padding-top: 10px;
-	padding-bottom: 20px;
+	padding:15px;
 }
-.post-show-main-table1{
-	width: 710px;
-	margin-left: 20px;
+.post-show-main-user{
+	float: left;
 }
-.post-show-main-table1-tbody-td1{
-	width: 100px;
+.post-show-main-title{
+	float: left;
+	width: 500px;
 	text-align: center;
-}
-.post-show-main-images{
-	margin-left: 10px;
-	margin-right: 10px;
-}
-.post-show-main-table1-tbody-td3{
-	text-align: center;
-	padding-left: 20px;
-	padding-right: 100px;
-}
-.post-show-main-title-h2{
 	font-size: 30px;
-}
-.post-show-main-created_at{
-	width: 140px;
-	margin-left: 590px;
-}
-.post-show-main-table2{
-	width: 720px;
-	margin-right: 15px;
-	margin-left: 15px;
 	margin-top: 10px;
 }
-.post-show-main-genre-p{
-	text-align: center;
-	font-family: serif;
-	font-size: 18px;
-	letter-spacing: 0.15em;
-	margin: 2px;
+.post-show-main-option{
+	margin-top: 10px;
 }
-.post-show-main-genre{
-	text-align: center;
+.post-show-main-created_at{
+	float: right;
+	margin-top: 50px;
 }
-.post-show-main-location-p{
-	text-align: center;
-	font-family: serif;
-	font-size: 18px;
-	letter-spacing: 0.15em;
-	margin: 2px;
+.post-show-main-option-genre{
+	text-align: right;
+	padding-right: 40px;
 }
-.post-show-main-location{
-	text-align: center;
+.post-show-main-destroy{
+	float: right;
+	font-size: 23px;
+	margin-top: 14px;
 }
-.post-show-main-posted_details{
-	width: 720-180px;
-	height: 100%;
-	position: relative;
-  	top: -40px;
-  	left: 10px;
-  	overflow: auto;
+.post-show-commenter{
+	font-size: 20px;
+}
+.post-show-main-comment{
+	float: right;
+	font-size: 23px;
+	width: 33px;
+	margin-top: 5px;
 }
 .post-show-main-favorits{
+	float: right;
 	text-align: right;
-	height: 60px;
+	height: 50px;
+	padding-right: 10px;
 }
 input.btn-lg{
 	padding: 0;
-	font-size: 30px;
+	font-size: 20px;
 }
 
 
@@ -291,7 +270,6 @@ input.btn-lg{
 }
 .searchtitle-span{
 	font-size: 30px;
-	
 }
 .search-main-card{
 	background-color: #FFF;
